# smart_search_beta

./: README.md  database.py  engine.py  engine_v2.py  front.py  front_database.py  pyproject.toml  special_reports_extractor.py
database/: __init__.py  database.py  special_reports_extractor.py
engine/: engine.py
pages/: front_database.py
test/: test_database.py
testing/: test_database.py
tests/: test_database.py  test_engine.py  test_extractor.py
