[tool.poetry]
name = "smartsearch-beta-"
version = "0.1.0"
description = "Smart Search is an intelligent search tool for browsing reports with a semantically-aware engine."
authors = ["dyngs <dominikskotarczak@gmail.com>"]
readme = "README.md"
packages = [{include = "smartsearch_beta_"}]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.5.3"
farm-haystack = "^1.12.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
